--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Green thumb app: make your plants happy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "node_modules/.bin/nodemon  ./server/index.js"
   },
   "repository": {
     "type": "git",
