--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "Green thumb app: make your plants happy",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
     "test": "react-scripts test --env=jsdom",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
-=======
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "eject": "react-scripts eject",
     "start-server": "node_modules/.bin/nodemon  ./server/index.js"
->>>>>>> c9d18425faa295a5462b81cc8c55e805bd4064f9
   },
   "repository": {
     "type": "git",
