--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^1.15.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "4.2.0",
