--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "^16.2.0",
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.0"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
@@ -41,6 +43,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "svg-inline-loader": "^0.8.0"
   }
 }
