--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "svg-inline-loader": "^0.8.0"
   }
 }
