--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.0"
+    "semantic-ui-react": "^0.79.0",
+    "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
