--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.7",
+    "mongoose-validator": "^2.0.2",
     "nodemon": "^1.15.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
