Mise en place des mecaniques de connection + inscription. Il reste à cabler les formulaires et adapter les <Route>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/gtteam69/green-thumb-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
@@ -40,6 +41,10 @@
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
     "sha.js": "^2.4.11"
@@ -51,8 +56,6 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
     "svg-inline-loader": "^0.8.0"
   }
 }
