change the way reducers and action creators are made

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lodash": "^4.17.5",
     "mongoose": "^5.0.7",
     "mongoose-validator": "^2.0.2",
-    "nodemon": "^1.15.1",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -41,7 +41,7 @@
     "react-redux": "^5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.5",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
